2004-02-23  Dan Winship  <danw@ximian.com>

	* my-evolution.xml: Remove (this was the Summary's UI file)

	* Makefile.am (XML_FILES): Remove my-evolution.xml

2004-02-11  Rodney Dawes  <dobey@ximian.com>

	* evolution-mail-message.xml: Add sender to Address Book, not
	Addressbook

2004-01-26  David Trowbridge <trowbrds@cs.colorado.edu>
 
 	* evolution.xml: added "Quick Reference" menu item
 
2004-01-27  Rodney Dawes  <dobey@ximian.com>

	* evolution-mail-message.xml: Enable [, ], ., and , as mail accels
	again, but not in the menus, so that GTK+ doesn't grab them from the
	search bar

2004-01-26  Rodney Dawes  <dobey@ximian.com>

	* evolution-addressbook.xml:
	* evolution-mail-global.xml:
	* evolution-mail-message.xml: Get rid of all the *Shift*character
	keybindings, so people can actually type things in the search bar,
	Just use *Control*basekey instead

	Fixes #41769

2004-01-23  Rodney Dawes  <dobey@ximian.com>

	* evolution-mail-list.xml: Fix Folder submenu location
	* evolution.xml: Add ComponentPlaceholder back to File menu

	Fixes #51960

2004-01-15  Rodrigo Moya <rodrigo@ximian.com>

	* evolution-mail-global.xml: moved 'Forget Passwords' item...

	* evolution.xml: ...to the shell.

2004-01-12  Meilof Veeningen  <meilof@wanadoo.nl>

	* evolution-message-composer.xml: Add menu items to show To and
	PostTo

2004-01-06  Rodney Dawes  <dobey@ximian.com>

	* evolution-mail-messagedisplay.xml: Fix missing ">" typo

2004-01-06  Rodney Dawes  <dobey@ximian.com>

	* evolution-comp-editor.xml:
	* evolution-contact-editor.xml:
	* evolution-contact-list-editor.xml:
	* evolution-event-editor.xml:
	* evolution-mail-messagedisplay.xml:
	* evolution-message-composer.xml:
	* evolution-signature-editor.xml:
	* evolution.xml: Fixes bug #39488, use hlook="system" for toolbars

2003-12-31  Kidd Wang  <kidd.wang@sun.com>

	* evolution-tasks.xml: Add a menu item [Open Task] to [File] for
	the tasks component.

2003-12-23  Kidd Wang  <kidd.wang@sun.com>
