@@ -1,3 +1,8 @@
+2004-02-25  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* evolution-mail-message.xml: Assign Delete and KP_Delete as
+	accels for the MessageDelete menu item.
+
 2004-02-23  Dan Winship  <danw@ximian.com>
 
 	* my-evolution.xml: Remove (this was the Summary's UI file)
